--- a/public/admin.html
+++ b/public/admin.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Node.js</title>
+		<title>Admin console</title>
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -14,9 +14,34 @@
 			        $('.console').prepend("<p>" + JSON.stringify(data) + "</p>");
 			    });
 
-				socket.on('game', function (data) {
-					$('.game').prepend("<p>" + JSON.stringify(data) + "</p>");
-				})
+				socket.on('updateControlPanel', function (data) {
+					var html = "";
+					for(var game in data) {
+						if(game.isPlaying) {
+							html += "<div class='game active'>";
+						} else {
+							html += "<div class='game'>";
+						}
+						html +=	"	<p class='gameTitle'>Game title: " + game.title + "</p>";
+						if(game.player1Alive) {
+							html += "<p class='playerName active" + game.player1State + "'>Player 1: " + game.player1 + "</p>";
+						} else {
+							html += "<p class='playerName'>Player 1: " + game.player1 + "</p>";
+						}
+						if(game.player2Alive) {
+							html += "<p class='playerName active" + game.player2State + "'>Player 2: " + game.player2 + "</p>";
+						} else {
+							html += "<p class='playerName'>Player 2: " + game.player2 + "</p>";
+						}
+						if(game.mayStart) {
+							html += "<a href='#' class='startGame' data-game='" + game.title + "'>Start game</a>&nbsp;";
+						} 
+						if(game.isPlaying) {
+							html += "<a href='#' class='stopGame' data-game='" + game.title + "'>Stop game</a>";
+						}
+						html += "</div>";
+					}
+				});
 
 				$('.ping').click(function() {
 					socket.emit('ping', {});
@@ -25,16 +50,18 @@
 					socket.emit('initComPorts', {});
 				});
 				$('.current').click(function() {
-					socket.emit('updateOverview', {});
+					socket.emit('listActive', {});
 				});
 				$('.handshake').click(function() {
 					socket.emit('getHandshake', {});
 				});
-				$('.start').click(function() {
-					socket.emit('startGame', {value: "Capture the flag"});
+				$('.startGame').click(function() {
+					var game = $(this).data("game");
+					socket.emit('startGame', {value: game});
 				})
-				$('.stop').click(function() {
-					socket.emit('stopGame', {value: "Capture the flag"});
+				$('.stopGame').click(function() {
+					var game = $(this).data("game");
+					socket.emit('stopGame', {value: game});
 				})
 			});
 		</script>
@@ -81,17 +108,17 @@
 			</nav>
 			<div class="row">
 				<div class="col-md-12">
-					<h1>Arduino games</h1>
+					<h1 class="page-header">Arduino games</h1>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-5">
 					<h2>Console</h2>
 					<div class="well console">
 
 					</div>
 				</div>
-				<div class="col-md-6">
-					<h2>Game</h2>
-					<div class="well game">
+				<div class="col-md-7">
+					<h2>Game control panel</h2>
+					<div class="control">
 
 					</div>
 				</div>
