--- a/public/screen.html
+++ b/public/screen.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Node.js</title>
+		<title>Screen</title>
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -20,21 +20,39 @@
 			    	$('.currentPlayerName2').html(data.playerName2);
 			    	$('.currentPlayerPoints1').html(data.playerPoints1);
 			    	$('.currentPlayerPoints2').html(data.playerPoints2);
+			    	if(data.player1Alive) {
+			    		$('.player1').attr('class', 'col-md-5 player1 alive');
+			    	} else {
+			    		$('.player1').attr('class', 'col-md-5 player1');
+			    	}
+			    	if(data.player2Alive) {
+			    		$('.player2').attr('class', 'col-md-5 player2 alive');
+			    	} else {
+			    		$('.player2').attr('class', 'col-md-5 player2');
+			    	}
 			    });
 
 			    socket.on('updateOverview', function (data) {
 			    	var html = "";
 			    	for(var game in data) {
-			    		html += "<div class='col-md-2'>" +
+						html += "<div class='col-md-2'>" +
 			    				"	<div class='col-md-12'>" +
 			    				"		<h3>" + game + "</h3>" +
-			    				"	</div>" +
-			    				"	<div class='col-md-6'>" +
-			    				"		<b>" + data[game].playerName1 + "</b>" +
+			    				"	</div>";
+			    		if(data[game].player1Alive) {
+			    			html +=	"<div class='col-md-6 alive'>";
+			    		} else {
+			    			html +=	"<div class='col-md-6'>";
+			    		}
+			    		html +=	"		<b>" + data[game].playerName1 + "</b>" +
 			    				"		<p>" + data[game].playerPoints1 + "</p>" +
-			    				"	</div>" +
-			    				"	<div class='col-md-6'>" +
-			    				"		<b>" + data[game].playerName2 + "</b>" +
+			    				"	</div>";
+			    		if(data[game].player2Alive) {
+			    			html +=	"<div class='col-md-6 alive'>";
+			    		} else {
+			    			html +=	"<div class='col-md-6'>";
+			    		}
+			    		html +=	"		<b>" + data[game].playerName2 + "</b>" +
 			    				"		<p>" + data[game].playerPoints2 + "</p>" +
 			    				"	</div>" +
 			    				"</div>";
@@ -93,14 +111,14 @@
 						<h1><small>Huidige game:</small> <i class="currentGameTitle">geen</i></h1>
 					</div>
 					<hr>
-					<div class="col-md-5">
+					<div class="col-md-5 player1">
 						<h2 class="text-center currentPlayerName1">x</h2>
 						<h2 class="text-center currentPlayerPoints1">0</h2>
 					</div>
 					<div class="col-md-2">
 						<h3 class="text-center vs">vs</h3>
 					</div>
-					<div class="col-md-5">
+					<div class="col-md-5 player2">
 						<h2 class="text-center currentPlayerName2">x</h2>
 						<h2 class="text-center currentPlayerPoints2">0</h2>
 					</div>
