--- a/public/screen.html
+++ b/public/screen.html
@@ -30,6 +30,7 @@
 			    	} else {
 			    		$('.player2').attr('class', 'col-md-5 player2');
 			    	}
+			    	$('.currentGame').html(html);
 			    });
 
 			    socket.on('updateOverview', function (data) {
@@ -58,7 +59,6 @@
 			    				"</div>";
 			    	}
 			    	$('.overView').html(html);
-			    	console.log(data);
 			    });
 				
 			});
