--- a/public/admin.html
+++ b/public/admin.html
@@ -92,6 +92,9 @@
 							<li>
 								<a class="state" href="#">Get handshake</a>
 							</li>
+							<li>
+								<a href='#' class='startGame' data-game='non-timed game'>Start game</a>
+							</li>
 						</ul>
 					</div>
 				</div>
